test/sema/typeck/struct/type-params-generic-fn.out
error: expected 1 type parameters but got 0.
--> type-params-generic-fn.dora:2:28
 | struct Foo[T](T, Bool)
 | fn f[T](_val: T): Foo[T] { Foo(val, false) }
                              ~~~~~~~~~~~~~~~
 | 
1 error found.
