test/sema/typeck/struct/type-params-generic-fn.dora
struct Foo[T](T, Bool)
fn f[T](_val: T): Foo[T] { Foo(val, false) }
